--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,34 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-navbar>
-</ion-header>
-
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+<ion-content class="background">
+  <h1>WELCOME AGAIN</h1>
+  <ion-card>
+    <ion-card-header>
+      LOGIN
+    </ion-card-header>
+  
+    <ion-card-content>
+      <ion-list no-lines>
+        <ion-item>
+          <ion-label floating>Username</ion-label>
+          <ion-input type="text"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label floating>Password</ion-label>
+          <ion-input type="password"></ion-input>
+        </ion-item>
+        <ion-item>
+          <p>Forgot password?<a>Get here</a></p>
+        </ion-item>
+        <button ion-button color="danger" block outline>LOGIN</button>
+      </ion-list>
+      <p>OR</p>
+      <button ion-button color="primary" ion-left block>
+        <ion-icon name="logo-facebook"></ion-icon>
+        <div> Login with facebook</div>
+      </button>
+      <button class="b2" ion-button color="danger" ion-left block>
+        <ion-icon name="logo-google"></ion-icon>
+        <div> Login with google</div>
+      </button>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
